@@ -1,3 +1,7 @@
+2001-01-31  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in (xml_print_nis): test function for nis.
+
 2001-01-28  Arturo Espinosa  <arturo@ximian.com>
 
 	* *-conf.in, *.pl.in: added emacs style directives.
